add nonalcoholic beverage bar chart example

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <div id="plotArea"></div>
+    <div id="plotBarArea"></div>
+    <div id="plotNonalcoholic"></div>
     <script src="plots.js"></script>
   </body>
 </html>
